# modelus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  docker-compose.yml  redis.conf  requirements.test.txt  requirements.txt  setup.cfg
modelus/: __init__.py  fields.py  model.py
modelus/backends/: memory.py  redis.py
remodel/: __init__.py  fields.py  model.py  model.py.bak
remodel/backends/: database.py  memory.py  redis.py
tests/: backend.py  models.py  test_memory.py  test_models.py  test_redis.py
