[metadata]
name = remodel
version = attr: remodel.__version__
description = A Simple ORM with various backends
long_description = file: README.rst, CHANGELOG.rst, LICENSE
license = BSD 2-Clause License

author = Adam Griffiths
author_email = adam.lw.griffiths@gmail.com
url = https://github.com/adamlwgriffiths/remodel/
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

test_suite = tests

[options]
packages = remodel
python_requires = >=3.5
install_requires =
    cerberus
    cerberedis
    redis

#tests_require =
#    redis_mock
