[metadata]
name = modelus
version = attr: modelus.__version__
description = A declarative data type, using Cerberus, with various database backends
long_description = file: README.rst, CHANGELOG.rst, LICENSE
license = BSD 2-Clause License

author = Adam Griffiths
author_email = adam.lw.griffiths@gmail.com
url = https://github.com/adamlwgriffiths/modelus/
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

test_suite = tests

[options]
packages = modelus
python_requires = >=3.5
install_requires =
    cerberus
    cerberedis
    redis

#tests_require =
#    redis_mock
